# ziweidoushu

./: .gitignore  Chunking.ipynb  README.md  astro_chart.py  evaluation.ipynb  generate grond-truth-data.ipynb  pyproject.toml  qdrant_workflow.py  rag_api.py
qdrant_storage/: raft_state.json
store_location/: 003b39b7-7d26-403e-a4d8-9938dc11caa0  0125cd3b-8bd4-4a8c-8447-9c0c08b8745e  01d7b138-d9a5-46cf-8fd0-b3c2148c31ca  01dea675-752a-4e26-93ae-45897b01444a  05f9a1c3-8bd0-4187-9fc6-6587bb3240f7  063ea821-c811-46d6-9c79-00804297155d  06c9855d-0569-4b79-939a-896910efd8e8  07c25765-8e3b-47e4-9193-021a6056408c  080a082b-d4e8-4f85-a3ea-4be304e8de6f  0b5014b1-8022-4fc9-bca3-e96e808929df  0d1121bb-8b16-46b5-a4d0-a5d83125123e  0d43c370-dd51-4313-ad24-6a2f7cf25506  0e24b71c-0a35-49a5-a1bc-34c723ce275a  0edf5b40-a142-4a78-b72f-7902b5535df1  105b2071-a955-40db-bf3a-f7cb5b9edf8a  11b7fb86-5eed-4a7e-8300-18e2c39aaaae  12cffe9e-e4d3-4bd6-bf06-a4ee674c7b6f  136606bd-62d0-4bac-8869-d7bdae9697c8  1711ca57-6e5f-48c4-a57b-eaee3b875976  19e704ae-05d7-4885-959c-2dd8837020dc  1a0356a5-71c8-40b5-9084-309737c7058c  1a92a6b1-4aad-4069-a865-6eeb06f9bcec  1cf43489-bad4-4a9e-a23a-73198b22bedc  1d925e8f-21fb-4441-9268-6c4b14d66356  1e5a0d07-8d89-42e4-8057-572324e91996  1e6656b5-aae3-45af-97ea-983f69ebd8c5  1eb3ec71-e764-4e7a-b8e2-850b671260d7  211d6e27-e7a8-40bd-8b93-d681b890cee6  212c2d9c-9476-4207-83cc-b71c40c863e7  221905e2-11ad-4751-86bf-37ea9cc34474  23ce9fec-ca41-44cb-b451-865e84ed8deb  241d9bd2-7760-4b72-9fa9-17da3eb32ad6  2426c1b5-088e-4691-a55d-3d63405292d7  (+195 more)
(+46 files in other folders)
